influcid ukr texts

--- a/influcid/index.html
+++ b/influcid/index.html
@@ -81,7 +81,7 @@
             Швидко зупиняє типові ознаки застуди¹
           </p>
           <p>
-            Зменшує потребу у застосуванні симптоматичних засобів (жарознижуючих, краплях в ніс, препаратах від кашлю)²
+            Зменшує потребу у застосуванні симптоматичних засобів (жарознижуючi, краплi в ніс, препарати від кашлю)²
           </p>
           <p>
             Сприяє швидкому одужанню¹
@@ -168,7 +168,7 @@
               <div class="subcontainer-particle-1">
                 <b>У ПЕРШУ ДОБУ</b>
                 <b class="subtext">Кожні 2 години</b>
-                <p>(по 1 таблетці)</p>
+                <p>по 1 таблетці</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -179,7 +179,7 @@
                   ПРИ ПОДАЛЬШОМУ<br />ЛІКУВАННІ
                 </b>
                 <b class="subtext">До одужання</b>
-                <p>(по 1 таблетці 3 рази на добу)</p>
+                <p>по 1 таблетці 3 рази на добу</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -218,7 +218,7 @@
           </div>
         </div>
         <p class="block-5__container-btext">
-          Тривалість лікування 7-10 днів до повного зникнення симптомів
+          Тривалість лікування 7-10 днів (до повного зникнення симптомів)
         </p>
         <h3>Для профілактики ГРВІ</h3>
 
@@ -261,7 +261,7 @@
             Застосування препарату при перших проявах симптомів ГРВІ та грипу або відразу після контакту з людьми, які захворіли, сприяє запобіганню розвитку захворювання;
           </p>
           <p>
-            Тривалість приймання препарату Інфлюцид після контакту з хворими на ГРВІ або грип - 1 тиждень;
+            Тривалість приймання препарату Інфлюцид після контакту з хворими на ГРВІ або грип — 1 тиждень;
           </p>
         </div>
         <div class="bottom-text__b">
@@ -284,7 +284,7 @@
               <div class="subcontainer-particle-1">
                 <b>У ПЕРШУ ДОБУ</b>
                 <b class="subtext">Кожну годину</b>
-                <p>(по 10 крапель)</p>
+                <p>по 10 крапель</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -295,13 +295,13 @@
                   ПРИ ПОДАЛЬШОМУ<br />ЛІКУВАННІ
                 </b>
                 <b class="subtext">До одужання</b>
-                <p>(по 10 крапель 3 рази на добу)</p>
+                <p>по 10 крапель 3 рази на добу</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
                 <div class="pill-container drop10"></div>
               </div>
-              <p>Тривалість лікування 7-10 днів до повного зникнення симптомів</p>
+              <p>Тривалість лікування 7-10 днів (до повного зникнення симптомів)</p>
             </div>
           </div>
 
@@ -309,20 +309,19 @@
             <h4>Для профілактики ГРВІ</h4>
             <p>
               <b>Дітям від 12 років і дорослим:</b>
-приймати по 10 крапель 3 рази на добу
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
                 <b>
                   ТРИ РАЗИ НА ДОБУ
                 </b>
-                <p>(по 10 крапель)</p>
+                <p>по 10 крапель</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
                 <div class="pill-container drop10"></div>
               </div>
-              <p>Тривалість застосування препарату Інфлюцид після контакту з хворими на ГРВІ або грип - 1 тиждень;</p>
+              <p>Тривалість застосування препарату Інфлюцид після контакту з хворими на ГРВІ або грип — 1 тиждень;</p>
             </div>
           </div>
         </div>
