--- a/influcid/index-ru.html
+++ b/influcid/index-ru.html
@@ -89,7 +89,7 @@
           <p>
             Предотвращает заболевание после контакта с людьми, которые болеют.
           </p>
-          <p>Блокирует размножение вируса и предупреждает распространение вирусной инфекции</p>
+          <p>Восстанавливает силы после перенесенного заболевания.¹</p>
         </div>
       </div>
       <a name="block-2"></a>
