--- a/influcid/index.html
+++ b/influcid/index.html
@@ -89,7 +89,7 @@
           <p>
             Запобігає захворюванню при контакті з людьми, які хворіють
           </p>
-          <p>Блокує розмноження вірусу та запобігає поширенню вірусної інфекції</p>
+          <p>Відновлює сили після перенесеної хвороби, зменшує ознаки виснаження¹</p>
         </div>
       </div>
       <a name="block-2"></a>
