--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<a href="isla/index.html">isla</a>
 			<a href="trachisan/index.html">trahisan</a>
 			<a href="influcid/index.html">influcid</a>
+			<a href="influcid/index.html">prospan</a>
 		</section>
 	</main>
 
@@ -94,6 +95,9 @@
 	}
 	a:nth-child(13)::before {
 		background: url("./influcid/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(14)::before {
+		background: url("./prospan/bg.png")no-repeat center / cover;
 	}
 </style>
 
