add link prospan

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<a href="isla/index.html">isla</a>
 			<a href="trachisan/index.html">trahisan</a>
 			<a href="influcid/index.html">influcid</a>
-			<a href="influcid/index.html">prospan</a>
+			<a href="prospan/index.html">prospan</a>
 		</section>
 	</main>
 
