--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			<a href="trachisan/index.html">trahisan</a>
 			<a href="influcid/index.html">influcid</a>
 			<a href="prospan/index.html">prospan</a>
+			<a href="isla-ru/index.html">isla-ru</a>
 		</section>
 	</main>
 
@@ -98,6 +99,9 @@
 	}
 	a:nth-child(14)::before {
 		background: url("./prospan/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(15)::before {
+		background: url("./isla-ru/bg.png")no-repeat center / cover;
 	}
 </style>
 
