--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 			<a href="influcid/index.html">influcid</a>
 			<a href="prospan/index.html">prospan</a>
 			<a href="isla-ru/index.html">isla-ru</a>
+			<a href="influcid-EN/index.html">influcid-EN</a>
+			<a href="Alpikol-HR/index.html">Alpikol-HR</a>
 		</section>
 	</main>
 
@@ -102,6 +104,12 @@
 	}
 	a:nth-child(15)::before {
 		background: url("./isla-ru/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(16)::before {
+		background: url("./influcid/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(17)::before {
+		background: url("./Alpikol/bg.png")no-repeat center / cover;
 	}
 </style>
 
