--- a/Alpikol-HR/index.html
+++ b/Alpikol-HR/index.html
@@ -209,14 +209,14 @@
 
     <div class="block-4">
         <div class="block-4__buttons">
-            <div class="keybtn1 block-4__btn-active">Ljekovita pelargonija</div>
-            <div class="keybtn2">Plod crne bazge</div>
+            <div class="keybtn1 block-4__btn-active">Plod crne bazge</div>
+            <div class="keybtn2">Ljekovita pelargonija</div>
             <div class="keybtn3">Yestimun</div>
         </div>
         <div class="block-4__container">
             <div class="block-4__container-img"></div>
             <div class="block-4__container-content">
-                <h4>Ekstrakt ploda crne bazge<br><p>Sambucus nigra</p></h4>
+                <h4><br><p>Sambucus nigra</p></h4>
               <p>Standardiziran na 10% polifenola
               </p>
                 <p>
@@ -260,14 +260,14 @@
             </div>
         </div>
         <p class="block-5__bottom-content">Prije upotrebe protresite bočicu.<br>
-Čuvati od dohvata male djece. Preporučene dnevne doze ne smiju se prekoračiti. <br>
-Dodatak prehrani nije nadomjestak ili zamjena uravnoteženoj prehrani.<br>
-Važno je pridržavati se uravnotežene i raznovrsne prehrane i zdravog načina života.<br>
-Preporučene dnevne doze ne smiju se prekoračiti.<br>
-Ne preporučuje se djeci mlađoj od 6 godina i trudnicama i dojiljama.<br>
-Ne preporučuje se uzimanje duže od 2 tjedna u kontinuitetu.<br>
-Nakon otvaranja proizvod čuvati u hladnjaku i upotrijebiti u roku 2 tjedna.<br>
-Bez konzervansa, bez umjetnih boja i aroma.
+          Čuvati od dohvata male djece. Preporučene dnevne doze ne smiju se prekoračiti. <br>
+          Dodatak prehrani nije nadomjestak ili zamjena uravnoteženoj prehrani.<br>
+          Važno je pridržavati se uravnotežene i raznovrsne prehrane i zdravog načina života.<br>
+          Preporučene dnevne doze ne smiju se prekoračiti.<br>
+          Ne preporučuje se djeci mlađoj od 6 godina i trudnicama i dojiljama.<br>
+          Ne preporučuje se uzimanje duže od 2 tjedna u kontinuitetu.<br>
+          Nakon otvaranja proizvod čuvati u hladnjaku i upotrijebiti u roku 2 tjedna.<br>
+          Bez konzervansa, bez umjetnih boja i aroma.
         </p>
     </div>
 
@@ -277,8 +277,11 @@ Bez konzervansa, bez umjetnih boja i aroma.
     <map>
       <h3 class="translated-text" key="buy-text">GDJE KUPITI</h3>
       <div class="map-content">
-        <a class="source-1" href="https://ljekarna.hr/bolno-grlo-i-kasalj/3976-alpikol-sirup.html"></a>
-        <a class="source-2" href="https://www.mojaljekarna.hr/imunitet/12344-alpikol-tekuci-dodatak-prehrani.html"></a>
+        <a class="source source-1" href="https://ljekarna.hr/bolno-grlo-i-kasalj/3976-alpikol-sirup.html"></a>
+        <a class="source source-2" href="https://www.mojaljekarna.hr/imunitet/12344-alpikol-tekuci-dodatak-prehrani.html"></a>
+        <a class="source source-3" href="https://www.ljekarna-marusic.hr/proizvodi/9381/alpikol-sirup-120-ml/"></a>
+        <a class="source source-4" href="https://ljekarna-fett.hr/product/alpikol-sirup/"></a>
+        <a class="source source-5" href="https://www.ljekarnaljubic.com/shop/dodaci-prehrani-kat/vitamini-i-minerali/alpikol-sirup-120-ml/"></a>
       </div>
 
     </map>
