--- a/influcid-EN/index.html
+++ b/influcid-EN/index.html
@@ -33,7 +33,7 @@
                 <li><a class="navmenu" href="#block-3" >Composition</a></li>
                 <li><a class="navmenu" href="#block-4" >How to use</a></li>
 <!--                <li><a class="where-to-buy" href="#block-5" >Де купити</a></li>-->
-                <!-- <li><a href="index-ru.html" >ru</a></li> -->
+                <li><a href="index-ru.html" >ru</a></li>
               </ul>
             </div>
           </div>
@@ -43,7 +43,7 @@
               <a class="navmenu" href="#block-3" >Composition</a>
               <a class="navmenu" href="#block-4" >How to use</a>
               <a class="where-to-buy" href="#block-5" >Where to buy</a>
-              <!-- <a href="index-ru.html" >ru</a> -->
+              <a href="index-ru.html" >ru</a>
           </div>
           <a class="instruction" href="./instruction.pdf"
           ><p class="translated-text" key="instruction">Instruction manual</p></a
