changes in influcid ua and en

--- a/influcid-EN/index-ru.html
+++ b/influcid-EN/index-ru.html
@@ -53,7 +53,7 @@
 
           </div>
         </div>
-        <div class="main-img-container"></div>
+        <div class="main-img-container main-img-container-ru"></div>
         <a name="block-1"></a>
         <p>
           <b>Простуда?</b> Выбор за тобой. <b>Инфлюцид</b>
@@ -61,7 +61,7 @@
 
         <div class="header-block-2">
             <a class="block-2__plate">
-            <p>Изготовлено в Германии</p>
+            <p>Сделано в Германии</p>
           </a>
           <a class="block-2__plate">
             <p>Взрослым и детям</p>
@@ -147,14 +147,14 @@
       <a name="block-4"></a>
       <div class="block-4">
         <h2>КАК ПРИНИМАТЬ</h2>
-        <div class="change-box">
+        <!-- <div class="change-box">
           <div>
             <p class=" p-btn1 active-btn">Таблетки</p>
           </div>
-<!--           <div>
+          <div>
             <p class="p-btn2">Капли</p>
-          </div> -->
-        </div>
+          </div>
+        </div> -->
       </div>
       <div class="block-5 block-5-1 block-5-active">
         <h3>В период острого заболевания</h3>
@@ -259,7 +259,7 @@
 
           </p>
           <p>
-            Длительность приёма препарата Инфлюцид посля контакта с больными на ОРВИ или грипп - 1 неделя;
+            Длительность приёма препарата Инфлюцид посля контакта с больными гриппом или ОРВИ - 1 неделя;
 
           </p>
         </div>
@@ -349,7 +349,7 @@
             <div class="block-6__container">
               <div class="block-6__container-img"><p>Грипп сезона 2020</p></div>
               <div class="block-6__container-text"><p>Эпидемиологический сезон начался и уже пора к нему готовиться. Обратите внимание, что разница между гриппом и ОРВИ (острая респираторная вирусная инфекция) заключается в том, что возбудителями гриппа являются различные штаммы вируса гриппа (варианты одного вида вируса, что отличаются по ряду свойств), а возбудителями ОРВИ является более 200 разнообразных вирусов, которые часто не связаны генетически и принадлежат к разным группам заболеваний.</p>
-                <p>Чего ждать в новом сезоне 2019 - 2020?</p>
+                <p>Чего ждать в новом сезоне 2019 - 2020 гг.?</p>
               </div>
               <button class="accordion">Подробнее</button>
               <div class="panel">
@@ -458,7 +458,7 @@
             </div>
           </div>
           <div class="disclamer-warning">
-            <p>САМОЛІКУВАННЯ МОЖЕ БУТИ ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ’Я</p>
+            <p>САМОЛЕЧЕНИЕ МОЖЕТ БЫТЬ ОПАСНЫМ ДЛЯ ВАШЕГО ЗДОРОВЬЯ</p>
           </div>
 
 
