--- a/influcid-EN/index.html
+++ b/influcid-EN/index.html
@@ -130,7 +130,7 @@
               <p>Ipecacuanha</p>
             </div>
           </div>
-          <div class="block-3__product"></div>
+          <div class="block-3__product product-en"></div>
           <div class="block-3__right-block">
             <div class="block-3__plate">
               <p>Eupatorium</p>
@@ -147,14 +147,14 @@
       <a name="block-4"></a>
       <div class="block-4">
         <h2>HOW TO USE THE MEDICINE?</h2>
-        <div class="change-box">
+        <!-- <div class="change-box">
           <div>
             <p class=" p-btn1 active-btn">pills</p>
           </div>
- <!--          <div>
+          <div>
             <p class="p-btn2">Краплі</p>
-          </div> -->
-        </div>
+          </div>
+        </div> -->
       </div>
       <div class="block-5 block-5-1 block-5-active">
         <h3>During acute disease</h3>
@@ -189,7 +189,8 @@
           </div>
             <p>
               <b>
-          <div class="container__subcontainer">Children from 12 years old and adults:</b> dissolve until complete dissolution every hour (not more than 12 tablets per day) until improvement
+          <div class="container__subcontainer">
+            <p>Children from 12 years old and adults:</b> dissolve until complete dissolution every hour (not more than 12 tablets per day) until improvement
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
@@ -227,7 +228,7 @@
             </p>
             <div class="subcontainer vertical">
               <div class="subcontainer-particle-1">
-                <b>PER DIEM</b>
+                <b>PER DAY</b>
                 <p>not more than 3 tablets</p>
               </div>
               <div class="subcontainer-particle-2">
@@ -263,7 +264,7 @@
         </div>
         <div class="bottom-text__b">
           <b>
-            Slowly dissolve tablets in the mouth until complete dissolution. For children under 3 years old it is recommended to dissolve the tablet in a small amount of liquid or give it in a crushed form, under the tongue. Take the mrdicine half an hour before or half an hour after meals.
+            Slowly dissolve tablets in the mouth until complete dissolution. For children under 3 years old it is recommended to dissolve the tablet in a small amount of liquid or give it in a crushed form, under the tongue. Take the medicine half an hour before or half an hour after meals.
           </b>
         </div>
         <a class="buy-btn pill-btn"><p>WHERE TO BUY?</p></a>
@@ -341,8 +342,9 @@
             <h2>USEFUL INFORMATION</h2>
             <div class="block-6__container">
               <div class="block-6__container-img"><p>Flue of the season 2020</p></div>
-              <div class="block-6__container-text"><p>The epidemiological season has begun and it is time to prepare for it. Please note that the difference between influenza and ARVI (acute respiratory viral infection) is that influenza pathogens are different strains of the influenza virus (variants of one type of virus, which differ in a number of properties), and ARVI pathogens are more than 200 different viruses that often not genetically related and belong to different groups of diseases.
-</p>
+              <div class="block-6__container-text"><p>The epidemiological season has begun and it is time to prepare for it. Please note that the difference between influenza and ARVI (acute respiratory viral infection) is that influenza pathogens are different strains of the influenza virus (variants of one type of virus, which differ in a number of properties), and ARVI pathogens are more than 200 different viruses that often not genetically related and belong to different groups of diseases.</p>
+                <p>What can we expect in the new season of 2019 - 2020?</p>
+
               </div>
               <button class="accordion">detailed</button>
               <div class="panel">
@@ -386,7 +388,7 @@
             <div class="block-6__container">
               <div class="block-6__container-img"><p>Treating a child’s cold</p></div>
               <div class="block-6__container-text"><p>
-                Unfortunately, it is impossible to protect completely your child from the common cold for the whole life. Especially when your child every day is surrounded by his/her peers. It is enough for one child in kindergarten or at school to get sick, and the infection quickly spreads further. A child’s illness often entails sick leave of his/her mother. And here the questions arise: “How to treat a cold quickly? What is the best medicine»</p>
+                Unfortunately, it is impossible to protect completely your child from the common cold for the whole life. Especially when your child every day is surrounded by his/her peers. It is enough for one child in kindergarten or at school to get sick, and the infection quickly spreads further. A child’s illness often entails sick leave of his/her mother. And here the questions arise: "How to treat a cold quickly? What is the best medicine"</p>
               </div>
               <button class="accordion">detailed</button>
               <div class="panel">
