--- a/influcid/index.html
+++ b/influcid/index.html
@@ -64,7 +64,7 @@
             <p>Вироблено в Німеччині</p>
           </a>
           <a class="block-2__plate">
-            <p>Дорослим та дітям</p>
+            <p>Дорослим та дітям від 1 року</p>
           </a>
           <a class="block-2__plate">
             <p>Натуральний склад</p>
@@ -78,7 +78,7 @@
         <h2>ПЕРЕВАГИ</h2>
         <div class="block-1__text">
           <p>
-            Швидко зупиняє типові ознаки застуди¹
+            Швидко зупиняє типові ознаки застуди гострої інфекції дихальних шляхів¹
           </p>
           <p>
             Зменшує потребу у застосуванні симптоматичних засобів (жарознижуючi, краплi в ніс, препарати від кашлю)²
@@ -261,7 +261,7 @@
             Застосування препарату при перших проявах симптомів ГРВІ та грипу або відразу після контакту з людьми, які захворіли, сприяє запобіганню розвитку захворювання;
           </p>
           <p>
-            Тривалість приймання препарату Інфлюцид після контакту з хворими на ГРВІ або грип — 1 тиждень;
+            Тривалість застосування препарату Інфлюцид після контакту з хворими на ГРВІ або грип - 1 тиждень;
           </p>
         </div>
         <div class="bottom-text__b">
