--- a/influcid-EN/index-ru.html
+++ b/influcid-EN/index-ru.html
@@ -448,13 +448,13 @@
             <!--              <li> Продажі в упаковках препаратів Цетрарії ісландської (ісландського моху) за період 2015-2019 роки (2019 -3 квартали) згідно даних роздібного аудиту    Sale Out Системи дослідження фармацевтичного ринку «Фармексплорер» </li>-->
             <!--            </ol>-->
             <p>
-              Реклама лікарського засобу. Перед застосуванням уважно ознайомтесь з інструкцією та проконсультуйтеся з лікарем. Зберігати у недоступному для дітей місці. Інфлюцид таб. Р.П. № UA/6740/01/01 від 08.11.2017. Інфлюцид краплі Р.П. № UA/6740/02/01 від 13.12.2017.
+              Реклама лекарственного препарата. Перед применением внимательно ознакомьтесь с инструкцией и проконсультируйтесь с врачом. Хранить в недоступном для детей месте. Инфлюцид таб. Р.С. № UA/6740/01/01 от 08.11.2017.
               <br>
-              Ексклюзивний дистриб'ютор: ПрАТ «Натурфарм», вул.Лісна, 30а, м.Київ, Пуща-Водиця, 04075; телефон: (044) 401-81-03
+              Эксклюзивный дистрибьютор: ПрАТ «Натурфарм», ул.Лесная, 30а, г.Киев, Пуща-Водица, 04075; телефон: (044) 401-81-03
             </p>
             <div class="logos-container">
-              <a class="disclamer-tra__logo" href=""><p><b>Виробник:</b><br>DHU (Німеччина)<br>https://www.dhu.de/</p></a>
-              <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Постачальник:</b><br> Альпен Фарма АГ<br>(Швейцарія)</p></a>
+              <a class="disclamer-tra__logo" href=""><p><b>Производитель:</b><br>DHU (Германия)<br>https://www.dhu.de/</p></a>
+              <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Поставщик:</b><br> Альпен Фарма АГ<br>(Швейцария)</p></a>
             </div>
           </div>
           <div class="disclamer-warning">
