--- a/influcid-EN/index-ru.html
+++ b/influcid-EN/index-ru.html
@@ -259,7 +259,7 @@
 
           </p>
           <p>
-            Длительность приёма препарата Инфлюцид посля контакта с больными гриппом или ОРВИ - 1 неделя;
+            Длительность приёма препарата Инфлюцид после контакта с больными гриппом или ОРВИ - 1 неделя;
 
           </p>
         </div>
@@ -365,7 +365,7 @@
                   
                   <p>мгновенное начало;</p>
                   <p>головная боль;</p>
-                  <p>повышение температуры тела до 38 ° С и более;</p>
+                  <p>повышение температуры тела до 38°С и более;</p>
                   <p>боль в горле;</p>
                   <p>кашель;</p>
                   <p>ломота в мышцах и суставах;</p>
@@ -448,13 +448,13 @@
             <!--              <li> Продажі в упаковках препаратів Цетрарії ісландської (ісландського моху) за період 2015-2019 роки (2019 -3 квартали) згідно даних роздібного аудиту    Sale Out Системи дослідження фармацевтичного ринку «Фармексплорер» </li>-->
             <!--            </ol>-->
             <p>
-              Реклама лекарственного препарата. Перед применением внимательно ознакомьтесь с инструкцией и проконсультируйтесь с врачом. Хранить в недоступном для детей месте. Инфлюцид таб. Р.С. № UA/6740/01/01 от 08.11.2017.
+              Реклама лекарственного препарата. Перед применением внимательно ознакомьтесь с инструкцией и проконсультируйтесь с врачом. Хранить в недоступном для детей месте. Инфлюцид таб. Р.С. № ___________________.
               <br>
-              Эксклюзивный дистрибьютор: ПрАТ «Натурфарм», ул.Лесная, 30а, г.Киев, Пуща-Водица, 04075; телефон: (044) 401-81-03
+              Эксклюзивный дистрибьютор: ____________________________.
             </p>
             <div class="logos-container">
               <a class="disclamer-tra__logo" href=""><p><b>Производитель:</b><br>DHU (Германия)<br>https://www.dhu.de/</p></a>
-              <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Поставщик:</b><br> Альпен Фарма АГ<br>(Швейцария)</p></a>
+              <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Импортер:</b><br> Альпен Фарма АГ<br>(Швейцария)</p></a>
             </div>
           </div>
           <div class="disclamer-warning">
