--- a/influcid-EN/index.html
+++ b/influcid-EN/index.html
@@ -204,7 +204,7 @@
               </div>
               <div class="subcontainer-particle-1">
                 <b>
-                  WITH FURTHER<br />TREATMENT
+                  FURTHER<br />TREATMENT
                 </b>
                 <b class="subtext">Until recovery</b>
                 <p>1-2 tablets three times a day</p>
@@ -452,7 +452,7 @@ The efficacy and safety of Influcid has been studied in many clinical trials, in
             </p> -->
             <div class="logos-container">
               <a class="disclamer-tra__logo" href=""><p><b>manufacturer:</b><br>DHU (Germany)<br>https://www.dhu.de/</p></a>
-              <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>provider:</b><br> Alpen Pharm<br>(Switzerland)</p></a>
+              <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>importer:</b><br> Alpen Pharm<br>(Switzerland)</p></a>
             </div>
           </div>
           <div class="disclamer-warning">
