--- a/influcid/index-ru.html
+++ b/influcid/index-ru.html
@@ -216,7 +216,7 @@
           </div>
         </div>
         <p class="block-5__container-btext">
-          Длительность лечения  7-10 дней до полного выздоровления
+          Длительность лечения 7-10 дней (до полного выздоровления)
         </p>
         <h3>Для профилактики ОРВИ</h3>
 
@@ -259,7 +259,7 @@
 
           </p>
           <p>
-            Длительность приёма препарата Инфлюцид посля контакта с больными на ОРВИ или грипп - 1 неделя;
+            Длительность приёма препарата Инфлюцид после контакта с больными ОРВИ или гриппом - 1 неделя;
 
           </p>
         </div>
@@ -301,7 +301,7 @@
                 <div class="clock-img"></div>
                 <div class="pill-container drop10"></div>
               </div>
-              <p>Длительность лечения 7-10 дней до полного выздоровления</p>
+              <p>Длительность лечения 7-10 дней (до полного выздоровления)</p>
             </div>
           </div>
 
@@ -349,7 +349,7 @@
             <div class="block-6__container">
               <div class="block-6__container-img"><p>Грипп сезона 2020</p></div>
               <div class="block-6__container-text"><p>Эпидемиологический сезон начался и уже пора к нему готовиться. Обратите внимание, что разница между гриппом и ОРВИ (острая респираторная вирусная инфекция) заключается в том, что возбудителями гриппа являются различные штаммы вируса гриппа (варианты одного вида вируса, что отличаются по ряду свойств), а возбудителями ОРВИ является более 200 разнообразных вирусов, которые часто не связаны генетически и принадлежат к разным группам заболеваний.</p>
-                <p>Чего ждать в новом сезоне 2019 - 2020?</p>
+                <p>Чего ждать в новом сезоне 2019 - 2020 гг.?</p>
               </div>
               <button class="accordion">Подробнее</button>
               <div class="panel">
@@ -365,7 +365,7 @@
                   
                   <p>мгновенное начало;</p>
                   <p>головная боль;</p>
-                  <p>повышение температуры тела до 38 ° С и более;</p>
+                  <p>повышение температуры тела до 38°С и более;</p>
                   <p>боль в горле;</p>
                   <p>кашель;</p>
                   <p>ломота в мышцах и суставах;</p>
@@ -454,7 +454,7 @@
             </p>
             <div class="logos-container">
               <a class="disclamer-tra__logo" href=""><p><b>Виробник:</b><br>DHU (Німеччина)<br>https://www.dhu.de/</p></a>
-              <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Постачальник:</b><br> Альпен Фарма АГ<br>(Швейцарія)</p></a>
+              <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Iмпортер:</b><br> Альпен Фарма АГ<br>(Швейцарія)</p></a>
             </div>
           </div>
           <div class="disclamer-warning">
