--- a/influcid-EN/index.html
+++ b/influcid-EN/index.html
@@ -46,7 +46,7 @@
               <a href="index-ru.html" >ru</a>
           </div>
           <a class="instruction" href="./instruction.pdf"
-          ><p class="translated-text" key="instruction">Instruction manual</p></a
+          ><p class="translated-text" key="instruction">Instruction</p></a
           >
         </div>
 
