--- a/Esberitoks/index_ru.html
+++ b/Esberitoks/index_ru.html
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Esberitoks</title>
-    <meta name="description" content="Esberitoks" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="shortcut icon" href="/images/pack copy.png" type="image/png" />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <script src="js/script.js"></script>
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-  </head>
+<head>
+
+
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133309215-14"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-133309215-14');
+  </script>
+  <!-- END Global site tag (gtag.js) - Google Analytics -->
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+          j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+          'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-WXVWG59');</script>
+  <!-- End Google Tag Manager -->
+  <meta charset="utf-8" />
+  <title>Эсберитокс - натуральный препарат из Германии для укрепления иммунитета.</title>
+  <meta name="description" content="Облегчает проявления простуды, улучшает самочувствие, ускоряет выздоровление, уменьшает риск усложнений." />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <link rel="shortcut icon" href="/images/pack copy.png" type="image/png" />
+  <link rel="stylesheet" href="css/normalize.css" />
+  <script src="js/script.js"></script>
+  <link rel="stylesheet" href="css/style.css" />
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+</head>
   <body>
   <div class="navigation-logo">
-    <a  href="index.html" class="logo">ЕСБЕРІТОКС</a>
+    <a  href="index_ru.html" class="logo">Эсберитокс</a>
     <div class="navigation-top" role="navigation">
       <div id="menuToggle">
         <input type="checkbox" /> <span></span> <span></span> <span></span>
@@ -27,8 +47,8 @@
           <li><a class="translated-text navmenu" key="g3" href="#composition">КАК ПРИНИМАТЬ</a></li>
           <li><a class="translated-text navmenu" key="g4" href="#treatment">ПОЛЕЗНАЯ ИНФОРМАЦИЯ</a></li>
           <li><a class="translated-text navmenu" key="g5" href="#map">ГДЕ КУПИТЬ</a></li>
-          <li><a class="translateBtn" language="ua" href="index.html">ua</a></li>
-          <li><a class="translateBtn active" language="ru">ru</a></li>
+          <li><a class="translateBtn active" language="ua" href="index.html">ua</a></li>
+<!--          <li><a class="translateBtn active" language="ru">ru</a></li>-->
         </ul>
       </div>
     </div>
@@ -38,10 +58,10 @@
       <a class="translated-text navmenu" key="g3" href="#composition">КАК ПРИНИМАТЬ</a>
       <a class="translated-text navmenu" key="g4" href="#treatment">ПОЛЕЗНАЯ ИНФОРМАЦИЯ</a>
       <a class="translated-text navmenu" key="g5" href="#map">ГДЕ КУПИТЬ</a>
-      <a class="translateBtn language" language="ua" href="index.html">ua</a>
-      <a class="translateBtn language active" language="ru">ru</a>
+      <a class="translateBtn language active" language="ua" href="index.html">ua</a>
+<!--      <a class="translateBtn language active" language="ru">ru</a>-->
     </div>
-    <a class="instruction" href="./instruction.pdf"><p class="translated-text" key="instruction">Iнструкцiя</p></a>
+    <a class="instruction" href="./instruction.pdf"><p class="translated-text" key="instruction">Инструкция</p></a>
   </div>
 
 <!--  content-->
@@ -197,11 +217,11 @@
   <div class="useful">
     <h2 class="translated-text" key="g34"><b>ПОЛЕЗНАЯ ИНФОРМАЦИЯ</b></h2>
     <div class="useful-container">
-      <a href="symptom1.html">ГРИП И ПРОСТУДА У ВЗРОСЛЫХ</a>
-      <a href="symptom2.html">ГРИП И ПРОСТУДА У ДЕТЕЙ</a>
-<!--      <a href="symptom3.html">БРОНХИТ</a>-->
+      <a href="symptom1_ru.html">ГРИП И ПРОСТУДА У ВЗРОСЛЫХ</a>
+      <a href="symptom2_ru.html">ГРИП И ПРОСТУДА У ДЕТЕЙ</a>
+      <a href="symptom3_ru.html">БРОНХИТ</a>
 <!--      <a href="symptom4.html">АНГИНА</a>-->
-<!--      <a href="symptom5.html">ГАЙМОРИТ</a>-->
+      <a href="symptom5_ru.html">ГАЙМОРИТ</a>
 <!--      <a href="symptom6.html">ГЕРПЕС</a>-->
 <!--      <a href="symptom7.html">УКРЕПЛЕНИЕ ИММУНИТЕТА</a>-->
     </div>
