--- a/Esberitoks/symptom5.html
+++ b/Esberitoks/symptom5.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Esberitoks</title>
-    <meta name="description" content="Esberitoks" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="shortcut icon" href="/images/pack copy.png" type="image/png" />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <script src="js/script1.js"></script>
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-  </head>
+<head>
+
+
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133309215-14"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-133309215-14');
+  </script>
+  <!-- END Global site tag (gtag.js) - Google Analytics -->
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+          j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+          'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-WXVWG59');</script>
+  <!-- End Google Tag Manager -->
+  <meta charset="utf-8" />
+  <title>Есберітокс - натуральний препарат з Німеччини для зміцнення імунітету.</title>
+  <meta name="description" content="Полегшує прояви застуди, покращує самопочуття, прискорює одужання на 2 дні, зменшує ризик ускладнень." />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <link rel="shortcut icon" href="/images/pack copy.png" type="image/png" />
+  <link rel="stylesheet" href="css/normalize.css" />
+  <script src="js/script.js"></script>
+  <link rel="stylesheet" href="css/style.css" />
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+</head>
   <body>
   <div class="navigation-logo">
     <a  href="index.html" class="logo">ЕСБЕРІТОКС</a>
@@ -26,7 +46,7 @@
           <li><a class="translated-text navmenu" key="g4" href="#treatment">КОРИСНА ІНФОРМАЦІЯ</a></li>
           <li><a class="translated-text navmenu" key="g5" href="#map">ДЕ КУПИТИ</a></li>
           <li><a class="translateBtn active" language="ua">ua</a></li>
-          <li><a class="translateBtn" language="ru" href="symptom5_ru.html">ru</a></li>
+          <li><a class="translateBtn " language="ru" href="symptom5_ru.html">ru</a></li>
         </ul>
       </div>
     </div>
