--- a/Esberitoks/index.html
+++ b/Esberitoks/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133309215-14"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-133309215-14');
+    </script>
+    <!-- END Global site tag (gtag.js) - Google Analytics -->
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+              new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-WXVWG59');</script>
+    <!-- End Google Tag Manager -->
     <meta charset="utf-8" />
-    <title>Esberitoks</title>
-    <meta name="description" content="Esberitoks" />
+    <title>Есберітокс - натуральний препарат з Німеччини для зміцнення імунітету.</title>
+    <meta name="description" content="Полегшує прояви застуди, покращує самопочуття, прискорює одужання на 2 дні, зменшує ризик ускладнень." />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="shortcut icon" href="/images/pack copy.png" type="image/png" />
     <link rel="stylesheet" href="css/normalize.css" />
@@ -27,8 +47,8 @@
           <li><a class="translated-text navmenu" key="g3" href="#composition">ЯК ПРИЙМАТИ</a></li>
           <li><a class="translated-text navmenu" key="g4" href="#treatment">КОРИСНА ІНФОРМАЦІЯ</a></li>
           <li><a class="translated-text navmenu" key="g5" href="#map">ДЕ КУПИТИ</a></li>
-          <li><a class="translateBtn active" language="ua">ua</a></li>
-<!--          <li><a class="translateBtn" language="ru" >ru</a></li>-->
+<!--          <li><a class="translateBtn active" language="ua">ua</a></li>-->
+          <li><a class="translateBtn active" href="index_ru.html" language="ru" >ru</a></li>
         </ul>
       </div>
     </div>
@@ -38,8 +58,8 @@
       <a class="translated-text navmenu" key="g3" href="#composition">ЯК ПРИЙМАТИ</a>
       <a class="translated-text navmenu" key="g4" href="#treatment">КОРИСНА ІНФОРМАЦІЯ</a>
       <a class="translated-text navmenu" key="g5" href="#map">ДЕ КУПИТИ</a>
-      <a class="translateBtn language active" language="ua">ua</a>
-<!--      <a class="translateBtn language" language="ru">ru</a>-->
+<!--      <a class="translateBtn language active" language="ua">ua</a>-->
+      <a class="translateBtn language active" href="index_ru.html" language="ru">ru</a>
     </div>
     <a class="instruction" href="./instruction.pdf"><p class="translated-text" key="instruction">Iнструкцiя</p></a>
   </div>
@@ -206,7 +226,7 @@
       <a href="symptom1.html">Грип і застуда у дорослих</a>
       <a href="symptom2.html">Грип і застуда у дітей</a>
       <a href="symptom3.html">Бронхіт</a>
-      <a href="symptom4.html">Ангіна</a>
+      <a href="symptom4.html">Гайморит</a>
 <!--      <a href="symptom5.html">Гайморит</a>-->
 <!--      <a href="symptom6.html">Герпес</a>-->
 <!--      <a href="symptom7.html">Зміцнення імунітету</a>-->
