--- a/Esberitoks/symptom7_ru.html
+++ b/Esberitoks/symptom7_ru.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Esberitoks</title>
-    <meta name="description" content="Esberitoks" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="shortcut icon" href="/images/pack copy.png" type="image/png" />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <script src="js/script1.js"></script>
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-  </head>
+<head>
+
+
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133309215-14"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-133309215-14');
+  </script>
+  <!-- END Global site tag (gtag.js) - Google Analytics -->
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+          j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+          'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-WXVWG59');</script>
+  <!-- End Google Tag Manager -->
+  <meta charset="utf-8" />
+  <title>Эсберитокс - натуральный препарат из Германии для укрепления иммунитета.</title>
+  <meta name="description" content="Облегчает проявления простуды, улучшает самочувствие, ускоряет выздоровление, уменьшает риск усложнений." />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <link rel="shortcut icon" href="/images/pack copy.png" type="image/png" />
+  <link rel="stylesheet" href="css/normalize.css" />
+  <script src="js/script.js"></script>
+  <link rel="stylesheet" href="css/style.css" />
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+</head>
   <body>
   <div class="navigation-logo">
     <a  href="index.html" class="logo">ЕСБЕРІТОКС</a>
@@ -72,15 +92,15 @@
   </div>
 
   <div class="useful">
-    <h2 class="translated-text" key="g34"><b>КОРИСНА ІНФОРМАЦІЯ</b></h2>
+    <h2 class="translated-text" key="g34"><b>ПОЛЕЗНАЯ ИНФОРМАЦИЯ</b></h2>
     <div class="useful-container">
-      <a href="symptom1.html">Грип і застуда у дорослих</a>
-      <a href="symptom2.html">Грип і застуда у дітей</a>
-<!--      <a href="symptom3.html">Бронхіт</a>-->
-<!--      <a href="symptom4.html">Ангіна</a>-->
-<!--      <a href="symptom5.html">Гайморит</a>-->
-<!--      <a href="symptom6.html">Герпес</a>-->
-<!--      <a href="symptom7.html">Зміцнення імунітету</a>-->
+      <a href="symptom1_ru.html">ГРИП И ПРОСТУДА У ВЗРОСЛЫХ</a>
+      <a href="symptom2_ru.html">ГРИП И ПРОСТУДА У ДЕТЕЙ</a>
+      <a href="symptom3_ru.html">Бронхіт</a>
+      <!--    <a href="symptom4.html">Ангіна</a>-->
+      <a href="symptom5_ru.html">Гайморит</a>
+      <!--      <a href="symptom6.html">Герпес</a>-->
+      <!--      <a href="symptom7.html">Зміцнення імунітету</a>-->
     </div>
   </div>
   <a name="map"></a>
