--- a/influcid-EN/index.html
+++ b/influcid-EN/index.html
@@ -94,7 +94,7 @@
       </div>
       <a name="block-2"></a>
       <div class="block-2">
-        <h2>HOW DOES INFLUCID WORK?</h2>
+        <h2>HOW DOES INFLUCID WORK</h2>
         <div class="block-2__container">
           <div class="block-2__image">
             <b>
@@ -146,7 +146,7 @@
       </div>
       <a name="block-4"></a>
       <div class="block-4">
-        <h2>HOW TO USE THE MEDICINE?</h2>
+        <h2>HOW TO USE THE MEDICINE</h2>
         <!-- <div class="change-box">
           <div>
             <p class=" p-btn1 active-btn">pills</p>
@@ -421,7 +421,7 @@ The efficacy and safety of Influcid has been studied in many clinical trials, in
             </div>
 
             <div class="block-7">
-              <h2>WHERE TO BUY?</h2>
+              <h2>WHERE TO BUY</h2>
               <div id="comp_wgt" data-drug="11722,11721" data-lang="ru" data-url="https://compendium.com.ua/info/11096/infljutsid/" data-proj="инфлюцид" style="border-color: #2894cf; width: 80%"><div class="title" style="background: #2894cf; "><a href="https://compendium.com.ua/info/11096/infljutsid/" title="ИНФЛЮЦИД, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
               <!-- <div class="block-7__img"></div> -->
               <div class="block-7__text">
