--- a/isla/index-ru.html
+++ b/isla/index-ru.html
@@ -85,22 +85,22 @@
     <p>КОГДА НУЖНА ИСЛА</p>
     <div class="block block-3__container">
         <div class="block-3__plate">
-            <div class="plate__img"></div>
+            <div class="plate__img img_ru"></div>
             <p>ИСЛА СОХРАНЯЕТ ГОЛОС ПРИ ПРОФЕССИОНАЛЬНЫХ НАГРУЗКАХ НА  ГОЛОСОВЫЕ СВЯЗКИ (УЧИТЕЛЯ, ПЕВЦЫ, ЛЕКТОРЫ)
             </p>
         </div>
         <div class="block-3__plate">
-            <div class="plate__img"></div>
+            <div class="plate__img img_ru"></div>
             <p>ИСЛА ЗАЩИЩАЕТ И УВЛАЖНЯЕТ СЛИЗИСТЫЕ ОБОЛОЧКИ ДЫХАТЕЛЬНЫХ ПУТЕЙ ПРИ ПОВЫШЕННОЙ НАГРУЗКЕ И ОГРАНИЧЕНИИ НОСОВОГО ДЫХАНИЯ
             </p>
         </div>
         <div class="block-3__plate">
-            <div class="plate__img"></div>
+            <div class="plate__img img_ru"></div>
             <p>ИСЛА ОБВОЛАКИВАЕТ СЛИЗИСТЫЕ ОБОЛОЧКИ ДЫХАТЕЛЬНЫХ ПУТЕЙ И ЗАЩИЩАЕТ ИХ ОТ ВОЗДЕЙСТВИЯ РАЗДРАЖИТЕЛЕЙ, НАПРИМЕР, ТАБАЧНОГО ДЫМА
             </p>
         </div>
         <div class="block-3__plate">
-            <div class="plate__img"></div>
+            <div class="plate__img img_ru"></div>
             <p>ИСЛА УМЕНЬШАЕТ ВОСПАЛЕНИЕ И ПОМОГАЕТ ПРИ ОХРИПЛОСТИ ГОЛОСА И СУХОМ РАЗДРАЖАЮЩЕМ КАШЛЕ ВО ВРЕМЯ ПРОСТУДЫ
             </p>
         </div>
