--- a/influcid/index.html
+++ b/influcid/index.html
@@ -455,7 +455,7 @@
             </p>
             <div class="logos-container">
               <a class="disclamer-tra__logo" href=""><p><b>Виробник:</b><br>DHU (Німеччина)<br>https://www.dhu.de/</p></a>
-              <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Iмпортер:</b><br> Альпен Фарма АГ<br>(Швейцарія)</p></a>
+              <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Постачальник:</b><br> Альпен Фарма АГ<br>(Швейцарія)</p></a>
             </div>
           </div>
           <div class="disclamer-warning">
